<resources>
    <string name="app_name">DuongHoang_4020_P2</string>
    <string name="api_key">0a7d3e2320c9bc4040bdec2b342e56dd</string>
    <string name="movie_image">Movie Image</string>
    <string name="title">Title :</string>
    <string name="overview">OverView :</string>
    <string name="rating">Rating :</string>
    <string name="people_image">People Image</string>
    <string name="name">Name :</string>
    <string name="popularity">Popularity :</string>
</resources>