<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/spProgressBar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:scaleX="4"
        android:scaleY="4" />

    <Spinner
        android:id="@+id/spMovies"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="119dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/spCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPhotoSpinner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/movie_image" />

            <TextView
                android:id="@+id/tvTitleSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivPhotoSpinner"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOverviewSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitleSpinner"
                android:layout_margin="5dp"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tvRatingSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvOverviewSpinner"
                android:layout_margin="5dp"
                android:text="@string/rating"
                android:textSize="15sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>